// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing organizations: Header title 1`] = `
<h4
  class="ant-typography page-header css-dev-only-do-not-override-k7429z"
>
  Organization list
</h4>
`;

exports[`renders correctly when listing organizations: Search 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  test 345
</td>
`;

exports[`renders correctly when listing organizations: Search 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/205"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 1`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
    >
      Team id
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-k7429z"
    >
      205
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 2`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
    >
      Team identifier
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-k7429z"
    >
      205
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 3`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
    >
      Team status
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-k7429z"
    >
      Active
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 4`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
    >
      Team practitioners
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-k7429z"
    >
      <ul
        id="practitioner-teams"
      >
        <li>
          Allay Allan
        </li>
      </ul>
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  test 345
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/205"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 4
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/363"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Test Team One
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/361"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 5
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/364"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 3
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/362"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 5
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/365"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`responds as expected to errors: Header title 1`] = `
<h4
  class="ant-typography page-header css-dev-only-do-not-override-k7429z"
>
  Organization list
</h4>
`;

exports[`responds as expected to errors: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
  colspan="2"
>
  <div
    class="css-dev-only-do-not-override-k7429z ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      No data
    </div>
  </div>
</td>
`;
